--- a/README
+++ b/README
@@ -3,3 +3,5 @@ You can pass various parameters that are different from the default ones
 e.g. ./train.py --path=[PATH_TO_SAVED_MODEL_PARAMETERS] --epochs=20
 
 You can evaluate the model on the test set by running eval.py
+
+Make sure you specify the path to the MNIST dataset in both cases
